--- a/login-page/index.html
+++ b/login-page/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login/Signup</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="/time-management.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../restaurant.png" type="image/x-icon">
   </head>
   <body>
     <section class="page">
