--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav id="navbar">
       <div class="nav-container">
-        <div class="nav-brand">Logo</div>
+        <div class="nav-brand" ></div>
         <div class="nav-toggle" id="nav-toggle">
           <span></span>
           <span></span>
@@ -38,9 +38,9 @@
       <section class="about-section" id="about-section">
         <div class="container">
             <h2>About Us</h2>
-            <p>Welcome to <strong>Your Restaurant Name</strong>, where we offer an exceptional dining experience. Our chefs use the freshest ingredients to craft delicious and innovative dishes that will tantalize your taste buds. We pride ourselves on our warm and inviting atmosphere, perfect for any occasion.</p>
+            <p>Welcome to <strong>Spice Haven</strong>, where we offer an exceptional dining experience. Our chefs use the freshest ingredients to craft delicious and innovative dishes that will tantalize your taste buds. We pride ourselves on our warm and inviting atmosphere, perfect for any occasion.</p>
             <p>Since our opening, we have been dedicated to providing top-notch service and culinary excellence. Our menu features a variety of options, from classic favorites to unique creations, ensuring there is something for everyone to enjoy.</p>
-            <p>We are passionate about food and committed to making every visit memorable. Thank you for choosing <strong>Your Restaurant Name</strong>. We look forward to serving you!</p>
+            <p>We are passionate about food and committed to making every visit memorable. Thank you for choosing <strong>Spice Haven</strong>. We look forward to serving you!</p>
         </div>
     </section>
 
@@ -90,13 +90,13 @@
                 <div class="footer-content">
                     <div class="footer-item">
                         <h3>About Us</h3>
-                        <p>Welcome to <strong>Your Restaurant Name</strong>, where we offer an exceptional dining experience. Our chefs use the freshest ingredients to craft delicious and innovative dishes that will tantalize your taste buds.</p>
+                        <p>Welcome to <strong>Spice Haven</strong>, where we offer an exceptional dining experience. Our chefs use the freshest ingredients to craft delicious and innovative dishes that will tantalize your taste buds.</p>
                     </div>
                     <div class="footer-item">
                         <h3>Contact Info</h3>
                         <p><strong>Address:</strong> 123 Main Street, Anytown, USA</p>
                         <p><strong>Phone:</strong> (123) 456-7890</p>
-                        <p><strong>Email:</strong> info@yourrestaurant.com</p>
+                        <p><strong>Email:</strong> info@Spice Haven.com</p>
                     </div>
                     <div class="footer-item">
                         <h3>Follow Us</h3>
